[gd_scene load_steps=6 format=2]

[ext_resource path="res://Enemies/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Stats/Stats.tscn" type="PackedScene" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Effects/EffectsManager.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 65
collision_mask = 16
script = ExtResource( 1 )

[node name="Stats" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="WeaponRaycast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 25, 0 )

[node name="DetectionZone" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZone"]

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="EffectsManager" parent="." instance=ExtResource( 4 )]
position = Vector2( -16, -40 )

[connection signal="body_entered" from="DetectionZone" to="." method="_on_DetectionZone_body_entered"]
